--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Ticket Validator</h1>
+    <h1 align="center" style="font-size: 48px;">LAHORE SAFARI EV STATION VALIDATION COUNTER</h1>
     <form method="POST" onsubmit="return validateForm()">
         <label for="ticket_number">Ticket Number:</label>
         <input type="number" name="ticket_number" id="ticket_number" autofocus="autofocus" required aria-live="polite">  <br>
